--- a/rpi_zero_sensor/requirements.txt
+++ b/rpi_zero_sensor/requirements.txt
@@ -12,6 +12,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 DateTime==5.5
+dotenv==0.9.9
 Flask==3.1.0
 flask-cors==5.0.1
 idna==3.10
