--- a/windows_collector/requirements.txt
+++ b/windows_collector/requirements.txt
@@ -14,6 +14,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.2
+dotenv==0.9.9
 exceptiongroup==1.2.2
 Flask==3.1.0
 frozenlist==1.5.0
