--- a/rpi_zero_sensor/requirements.txt
+++ b/rpi_zero_sensor/requirements.txt
@@ -24,6 +24,7 @@ pandas==2.2.3
 pyftdi==0.56.0
 pyserial==3.5
 python-dateutil==2.9.0.post0
+python-kasa==0.7.7
 pytz==2025.2
 pyusb==1.3.1
 requests==2.32.3
