--- a/rpi_zero_sensor/config_template.json
+++ b/rpi_zero_sensor/config_template.json
@@ -2,6 +2,7 @@
   "sensor": {
     "number": 0,
     "location":"",
-    "frequency_seconds":300
+    "frequency_seconds":300,
+    "start_date":"2025-06-01"
   }
 }
