--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,6 @@ venv/*
 
 data/*
 
-archive/pi1/*
-archive/pi2/*
-archive/pi3/*
-archive/pi4/*
-archive/pi5/*
-archive/pi6/*
-archive/pi7/*
-archive/pi8/*
-archive/kasa/*
+archive
+
+!archive/README.md
