--- a/rpi_zero_sensor/config_template.json
+++ b/rpi_zero_sensor/config_template.json
@@ -1,6 +1,7 @@
 {
   "sensor": {
     "number": 0,
+    "offsetC":0,
     "location":"",
     "frequency_seconds":300,
     "start_date":"2025-06-01"
